# claude-code-scrubify

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.claude/adrs/: 001-error-handling-strategy.md
.claude/rfcs/: 001-pre-scrub-backup.md  002-status-output-redesign.md
.github/workflows/: release-please.yml
benches/: scrub_jsonl.rs
src/: allowlist.rs  cache.rs  display.rs  entropy.rs  hook.rs  hook_state.rs  init.rs  jsonl.rs  lib.rs  main.rs  message.rs  patterns.rs  scan.rs  scanner.rs  scrubber.rs  stats.rs  status.rs
src/commands/: hook.rs  init.rs  mod.rs  scan.rs  status.rs
