[package]
name = "scrub-history"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
tempfile = "3"
rayon = "1"
anyhow = "1"
tracing = "0.1"
sha2 = "0.10"
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scrub_jsonl"
harness = false

[lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Noisy pedantic lints to allow
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
# Restriction lints worth enabling
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
exit = "warn"
get_unwrap = "warn"
